--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.1",
+    "lodash.debounce": "^4.0.8",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
