--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.7",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@stream-io/flat-list-mvcp": "^0.10.2",
     "axios": "^1.2.1",
     "lodash.debounce": "^4.0.8",
     "nativewind": "^2.0.11",
