--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@rneui/base": "^4.0.0-rc.7",
@@ -21,6 +22,7 @@
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-sqlite-storage": "^6.0.1",
